--- a/SAM/Views/Shared/Partials/_Navigation.cshtml
+++ b/SAM/Views/Shared/Partials/_Navigation.cshtml
@@ -40,46 +40,19 @@
                     <i class="bi bi-chevron-down nav-dropdown-chevron"></i>
                 </button>
                 <ul class="nav-dropdown" id="dropdown-system-admin" role="menu">
+                    @if (isAdmin)
+                    {
+                        <li class="nav-item" role="none">
+                            <a class="nav-link" asp-controller="SystemAdmin" asp-action="Companies" role="menuitem" data-tooltip="Companies">
+                                <i class="bi bi-building"></i>
+                                <span class="nav-link-text">Companies</span>
+                            </a>
+                        </li>
+                    }
                     <li class="nav-item" role="none">
-                        <a class="nav-link" asp-controller="SystemAdmin" asp-action="Companies" role="menuitem" data-tooltip="Companies">
-                            <i class="bi bi-building"></i>
-                            <span class="nav-link-text">Companies</span>
-                        </a>
-                    </li>
-                    <li class="nav-item" role="none">
-                        <a class="nav-link" asp-controller="SystemAdmin" asp-action="Facilities" role="menuitem" data-tooltip="Facilities">
-                            <i class="bi bi-building-fill"></i>
-                            <span class="nav-link-text">Facilities</span>
-                        </a>
-                    </li>
-                    <li class="nav-item" role="none">
-                        <a class="nav-link" asp-controller="SystemAdmin" asp-action="Soils" role="menuitem" data-tooltip="Soils">
-                            <i class="bi bi-circle"></i>
-                            <span class="nav-link-text">Soils</span>
-                        </a>
-                    </li>
-                    <li class="nav-item" role="none">
-                        <a class="nav-link" asp-controller="SystemAdmin" asp-action="Crops" role="menuitem" data-tooltip="Crops">
-                            <i class="bi bi-flower1"></i>
-                            <span class="nav-link-text">Crops</span>
-                        </a>
-                    </li>
-                    <li class="nav-item" role="none">
-                        <a class="nav-link" asp-controller="SystemAdmin" asp-action="Nozzles" role="menuitem" data-tooltip="Nozzles">
-                            <i class="bi bi-droplet"></i>
-                            <span class="nav-link-text">Nozzles</span>
-                        </a>
-                    </li>
-                    <li class="nav-item" role="none">
-                        <a class="nav-link" asp-controller="SystemAdmin" asp-action="Sprayfields" role="menuitem" data-tooltip="Sprayfields">
-                            <i class="bi bi-grid"></i>
-                            <span class="nav-link-text">Sprayfields</span>
-                        </a>
-                    </li>
-                    <li class="nav-item" role="none">
-                        <a class="nav-link" asp-controller="SystemAdmin" asp-action="MonitoringWells" role="menuitem" data-tooltip="Monitoring Wells">
-                            <i class="bi bi-water"></i>
-                            <span class="nav-link-text">Monitoring Wells</span>
+                        <a class="nav-link" asp-controller="SystemAdmin" asp-action="SystemAdmin" asp-route-tab="facilities" role="menuitem" data-tooltip="System Administration">
+                            <i class="bi bi-gear"></i>
+                            <span class="nav-link-text">System Administration</span>
                         </a>
                     </li>
                 </ul>
