--- a/SAM/Views/UserManagement/UserRequests.cshtml
+++ b/SAM/Views/UserManagement/UserRequests.cshtml
@@ -303,7 +303,7 @@
             const cardBtn = document.getElementById('userRequestsCardViewBtn');
             const tableView = document.getElementById('userRequestsTableView');
             const cardView = document.getElementById('userRequestsCardView');
-            const storageKey = 'userRequestsViewMode';
+            const storageKey = 'viewMode';
 
             function setViewMode(mode) {
                 const isTable = mode === 'table';
